Bug 96864 - Mesa 12.0 radeon build broken
Summary: Mesa 12.0 radeon build broken
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Emil Velikov
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-08 17:40 UTC by Mark Janes
Modified: 2016-07-08 23:45 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-07-08 17:40:18 UTC
src/gallium/drivers/radeon/r600_cs.h: In function ‘radeon_set_context_reg_idx’:
src/gallium/drivers/radeon/r600_cs.h:105:3: error: ‘struct radeon_winsys_cs’ has no member named ‘current’
   assert(cs->current.cdw + 3 <= cs->current.max_dw);


Bisected to:
bad f41f78cda108cddc7e4ba62fcb557d1304f5bb44
Author:     Nicolai Hähnle <nicolai.haehnle@amd.com>
Commit:     Emil Velikov <emil.l.velikov@gmail.com>

radeonsi: drop the DRAW_PREAMBLE packet on Polaris

It will be removed from the firmware for the Polaris.

Cc: 12.0 <mesa-stable@lists.freedesktop.org>
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
Reviewed-by: Marek Olšák <marek.olsak@amd.com>
(cherry picked from commit 0da890e62cf14fef273500491d14fb8d980fe452)
Comment 1 Mark Janes 2016-07-08 20:10:52 UTC
My configure:

configure --enable-gbm --with-egl-platforms=x11,drm --enable-glx-tls --enable-gles1 --enable-gles2 --with-gallium-drivers=i915,svga,swrast,r300,r600,radeonsi,nouveau --enable-debug
Comment 2 Emil Velikov 2016-07-08 21:14:22 UTC
Just triple-checking that I've not butchered anything else, and I'll push the fix s/current.//d and roll out 12.0.1.
Comment 3 Emil Velikov 2016-07-08 23:39:51 UTC
Should be fixed with

commit a705f82a5662cafe3875fc701390d252b8c5d31d
Author: Emil Velikov <emil.velikov@collabora.com>
Date:   Fri Jul 8 22:04:34 2016 +0100

    radeon: reference the correct cdw/max_dw


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.